--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1,79 +1,40 @@
-
 swiper {
-    width: 100%;
-    height: 100%;
-  }
-  
-  .swiper-slide {
-    text-align: center;
-    font-size: 18px;
-    background: black;
-  
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: -webkit-flex;
-    display: flex;
-    -webkit-box-pack: center;
-    -ms-flex-pack: center;
-    -webkit-justify-content: center;
-    justify-content: center;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
-    -webkit-align-items: center;
-    align-items: center;
-  }
-  
-  .swiper-slide img {
-    display: block;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-  }
-
-  .img-box:hover .p{
-    top: 0;
-  }
-
-  .p{
-    transition: 0.5s all;
-  }
-
-  .banner-astronout {
-    position: absolute;
-    animation: astronout 2s infinite alternate linear;
-    -webkit-animation: astronout  4s infinite alternate linear;
-    width: 400px;
+  width: 100%;
+  height: 100%;
 }
 
-.banner-astronout1 {
-  position: absolute;
-  animation: astronout1 2s infinite alternate linear;
-  -webkit-animation: astronout1  4s infinite alternate linear;
-  width: 400px;
+.swiper-slide {
+  text-align: center;
+  font-size: 18px;
+  background: black;
+
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  -webkit-justify-content: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  -webkit-align-items: center;
+  align-items: center;
 }
 
-@keyframes astronout1 {
-  0% {
-    left: 70%;
-    top: 25%;
-  }
-
-  100% {
-    left: 60%;
-    top: 35%;
-  }
+.swiper-slide img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
-@keyframes astronout {
-  0% {
-    left: 50%;
-    top: 45%;
-  }
+.img-box:hover .p {
+  top: 0;
+}
 
-  100% {
-    left: 40%;
-    top: 35%;
-  }
+.p {
+  transition: 0.5s all;
 }
 
 .navbar-link {
@@ -114,15 +75,4 @@ swiper {
   .navbar-link::after {
     background: #0a0a0a;
   }
-}
-
-
-@keyframes float {
-  0% { transform: translateY(0); }
-  50% { transform: translateY(-5px); }
-  100% { transform: translateY(0); }
-}
-
-.animate-float {
-  animation: float 2s ease-in-out infinite;
 }
